--- a/k-shop.css
+++ b/k-shop.css
@@ -262,7 +262,7 @@
 .partner-logo {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: all 0.4s ease;
     filter: brightness(1);
 }
